--- a/index.html
+++ b/index.html
@@ -1,29 +1,39 @@
 
 <!DOCTYPE html>
-<html class="page" lang="ru">
+<html lang="ru">
 
 <head>
-  <meta charset="utf-8">
-  <title>Интернет-магазин кофейных напитков Drink2Go</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="stylesheet" href="less/style.less">
+  <meta charset="UTF-8">
+  <title>Интернет-магазин Drink2Go</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/style.min.css">
+  <link rel="preload" href="fonts/montserratregular.woff" as="font" type="font/woff" crossorigin>
+  <link rel="preload" href="fonts/montserratregular.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="fonts/montserratmedium.woff" as="font" type="font/woff" crossorigin>
+  <link rel="preload" href="fonts/montserratmedium.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="fonts/montserratbold.woff" as="font" type="font/woff" crossorigin>
+  <link rel="preload" href="fonts/montserratbold.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="fonts/montserratextrabold.woff" as="font" type="font/woff" crossorigin>
+  <link rel="preload" href="fonts/montserratextrabold.woff2" as="font" type="font/woff2" crossorigin>
 </head>
 
-<body class="body">
+<body class="page-body">
   <header class="header">
-    <nav class="main-nav main-nav_closed main-nav_nojs">
-      <a class="main-nav__logo" href="#">
+    <div class="header__navigation header__navigation--closed header__navigation--nojs container">
+      <a class="header__logo" href="#">
         <picture>
-          <source media="(min-width: 1440px)" srcset="img/desktop-logo.svg" />
-          <source media="(min-width: 768px)" srcset="img/tablet-logo.svg" />
+          <source media="(min-width: 1440px)" srcset="./img/desktop-logo.svg" />
+          <source media="(min-width: 768px)" srcset="./img/tablet-logo.svg" />
           <img class="main-nav__logo-img" src="img/mobil-logo.svg" width="32" height="36" alt="логотип">
         </picture>
-        <span class="main-nav__logo-text">Интернет-магазин кофейных напитков</span>
       </a>
-      <div class="main-nav__dropdown">
+      <nav class="header__main-nav main-nav">
+        <button class="main-nav__toggle" type="button">
+          <span class="visually-hidden">открыть меню</span>
+        </button>
         <ul class="main-nav__list">
           <li class="main-nav__item">
-            <a class="main-nav__link main-nav__link_active" href="#">Главная</a>
+            <a class="main-nav__link main-nav__link--active" href="#">Главная</a>
           </li>
           <li class="main-nav__item">
             <a class="main-nav__link" href="#">Каталог</a>
@@ -35,23 +45,36 @@
             <a class="main-nav__link" href="#">О нас</a>
           </li>
         </ul>
-      </div>
-      <ul class="main-nav__user-nav">
-        <li class="main-nav__item">
-          <a class="main-nav__link main-nav__link_icon_account" href="#">
-            <p class="main-nav__link-text">Войти</p>
-          </a>
-        </li>
-        <li class="main-nav__item">
-          <a class="main-nav__link main-nav__link_icon_basket" href="#">
-            <p class="main-nav__link-text">Корзина</p>
-          </a>
-        </li>
-      </ul>
-      <button class="main-nav__toggle">
+      </nav>
+      <div class="header__user-menu user-menu">
+        <ul class="user-menu__list">
+          <li class="user-menu__item">
+            <a class="user-menu__link" href="#">
+              <svg class="user-menu__icon" role="img" width="16" height="16" viewBox="0 0 16 16" fill="none"
+              xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M10.6667 4C10.6667 5.47276 9.47276 6.66667 8 6.66667C6.52724 6.66667 5.33333 5.47276 5.33333 4C5.33333 2.52724 6.52724 1.33333 8 1.33333C9.47276 1.33333 10.6667 2.52724 10.6667 4ZM12 4C12 6.20914 10.2091 8 8 8C5.79086 8 4 6.20914 4 4C4 1.79086 5.79086 0 8 0C10.2091 0 12 1.79086 12 4ZM3.19673 12.3102C4.43611 11.2774 6.1613 10.6667 8 10.6667C9.8387 10.6667 11.5639 11.2774 12.8033 12.3102C14.0354 13.337 14.6667 14.6719 14.6667 16H16C16 14.2321 15.1573 12.5363 13.6569 11.286C12.1566 10.0357 10.1218 9.33333 8 9.33333C5.87821 9.33333 3.8434 10.0357 2.34315 11.286C0.842686 12.5363 0 14.2321 0 16L1.33333 16C1.33333 14.6719 1.96465 13.337 3.19673 12.3102Z"
+                fill="#333333" />
+              </svg>
+              <p class="user-menu__link-text">Войти</p>
+            </a>
+          </li>
+          <li class="user-menu__item">
+            <a class="user-menu__link" href="#">
+              <svg class="user-menu__icon" role="img" width="16" height="16" viewBox="0 0 16 16" fill="none"
+              xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M5.66091 3.87546L5.89351 6.66667H10.1065L10.3391 3.87546C10.4531 2.50699 9.37321 1.33333 8 1.33333C6.62679 1.33333 5.54687 2.50699 5.66091 3.87546ZM11.4444 6.66667L11.6678 3.98618C11.8466 1.84036 10.1533 0 8 0C5.84674 0 4.15336 1.84036 4.33218 3.98618L4.55556 6.66667H1.34687H0L0.190476 8L1.00626 13.7105C1.19393 15.0242 2.31905 16 3.64612 16H12.3539C13.6809 16 14.8061 15.0242 14.9937 13.7105L15.8095 8L16 6.66667H14.6531H11.4444ZM11.3333 8H11.2801L11.0579 10.6667H14.0817L14.4627 8H11.3333ZM9.94213 8H6.05787L6.28009 10.6667H9.71991L9.94213 8ZM4.71991 8H4.66667H1.53735L1.9183 10.6667H4.94213L4.71991 8ZM6.61342 14.6667L6.3912 12H9.6088L9.38658 14.6667H6.61342ZM10.9468 12L10.7245 14.6667H12.3539C13.0174 14.6667 13.58 14.1788 13.6738 13.5219L13.8912 12H10.9468ZM5.05324 12L5.27547 14.6667H3.64612C2.98259 14.6667 2.42003 14.1788 2.32619 13.5219L2.10877 12H5.05324Z"
+                fill="#333333" />
+            </svg>
+              <p class="user-menu__link-text">Корзина</p>
+            </a>
+          </li>
+        </ul>
+      <button class="user-menu__toggle">
         <span class="visually-hidden">Открыть меню</span>
       </button>
-    </nav>
+    </div>
   </header>
   <main class="main">
     <h1 class="visually-hidden">Интернет-магазин кофейных напитков</h1>
@@ -60,7 +83,17 @@
         <div class="promo__swiper swiper">
           <div class="swiper__wrapper">
             <div class="swiper__slide">
-              <img class="swiper__image" src="img/photo/flat-white-img-mobile.png" width="280" height="280" alt="Декаф Флэт Уайт">
+              <picture>
+                <source media="(min-width: 1440px)" type="image/webp"
+                  srcset="img/decafdesktop.webp, img/decafdesktop@2x.webp 2x">
+                <source media="(min-width: 768px)" type="image/webp"
+                  srcset="img/decaftablet.webp, img/decaftablet@2x.webp 2x">
+                <source type="image/webp" srcset="img/decafmobile.webp, img/decafmobile@2x.webp 2x">
+                <source media="(min-width: 1440px)" srcset="img/decafdesktop.png, img/decafdesktop@2x.png 2x">
+                <source media="(min-width: 768px)" srcset="img/decaftablet.png, img/decaftablet@2x.png 2x">
+                <img class="swiper__image" src="img/decafmobile.png" srcset="img/decafmobile@2x.png 2x" width="280"
+                  height="280" alt="Декаф Флэт Уайт">
+              </picture>
               <span class="swiper__new section-tag">Новинка!</span>
               <h2 class="swiper__title title title_size_big">Декаф Флэт Уайт</h2>
               <p class="swiper__description text text_size_middle">
@@ -74,7 +107,17 @@
             </div>
 
             <div class="swiper__slide" hidden>
-              <img class="swiper__image" src="img/photo/lavender-img.png" width="280" height="280" alt="Лавандовый Латте">
+              <picture>
+                <source media="(min-width: 1440px)" type="image/webp"
+                  srcset="img/lattedesktop.webp, img/lattedesktop@2x.webp 2x">
+                <source media="(min-width: 768px)" type="image/webp"
+                  srcset="img/lattetablet.webp, img/lattetablet@2x.webp 2x">
+                <source type="image/webp" srcset="img/lattemobile.webp, img/lattemobile@2x.webp 2x">
+                <source media="(min-width: 1440px)" srcset="img/lattedesktop.png, img/lattedesktop@2x.png 2x">
+                <source media="(min-width: 768px)" srcset="img/lattetablet.png, img/lattetablet@2x.png 2x">
+                <img class="swiper__image" src="img/lattemobile.png" srcset="img/lattemobile@2x.png 2x" width="280"
+                  height="280" alt="Лавандовый Латте">
+              </picture>              
               <span class="swiper__new section-tag">Новинка!</span>
               <h2 class="swiper__title title title_size_big">Лавандовый Латте</h2>
               <p class="swiper__description text text_size_middle">
@@ -88,7 +131,17 @@
             </div>
 
             <div class="swiper__slide" hidden>
-              <img class="swiper__image" src="img/photo/espresso-mg.png" width="280" height="280" alt="Тройной Эспрессо">
+              <picture>
+                <source media="(min-width: 1440px)" type="image/webp"
+                  srcset="img/espressodesktop.webp, img/espressodesktop@2x.webp 2x">
+                <source media="(min-width: 768px)" type="image/webp"
+                  srcset="img/espressotablet.webp, img/espressotablet@2x.webp 2x">
+                <source type="image/webp" srcset="img/espressomobile.webp, img/espressomobile@2x.webp 2x">
+                <source media="(min-width: 1440px)" srcset="img/espressodesktop.png, img/espressodesktop@2x.png 2x">
+                <source media="(min-width: 768px)" srcset="img/espressotablet.png, img/espressotablet@2x.png 2x">
+                <img class="swiper__image" src="img/espressomobile.png" srcset="img/espressomobile@2x.png 2x"
+                  width="280" height="280" alt="Тройной Эспрессо">
+              </picture>              
               <span class="swiper__new section-tag">Новинка!</span>
               <h2 class="swiper__title title title_size_big">Тройной Эспрессо</h2>
               <p class="swiper__description text text_size_middle">
@@ -368,7 +421,9 @@
       <div class="catalog__pagination pagination">
         <ul class="pagination__list">
           <li class="pagination__item">
-            <button class="pagination__button pagination__button--back" type="button"><span>Назад</span></button>
+            <button class="pagination__button pagination__button--back" type="button">
+              <span>Назад</span>
+            </button>
           </li>
           <li class="pagination__item">
             <button class="pagination__button" type="button">1</button>
@@ -380,7 +435,9 @@
             <button class="pagination__button" type="button">3</button>
           </li>
           <li class="pagination__item">
-            <button class="pagination__button pagination__button--next" type="button"><span>Вперёд</span></button>
+            <button class="pagination__button pagination__button--next" type="button">
+              <span>Вперёд</span>
+            </button>
           </li>
         </ul>
       </div>
@@ -402,9 +459,10 @@
   <footer class="page-footer">
     <div class="page-footer__wrapper">
       <div class="page-footer__social">
-        <a class="page-footer__logo">
+        <a class="page-footer__logo" href="#">
           <picture>
-            <!-- <source media="(min-width: 768px)" srcset=""> -->
+            <source media="(min-width:1440px)" srcset="./img/logo-desk.svg">
+            <source media="(min-width:768px)" srcset="./img/logo-desk.svg">
             <img class="page-footer__logo-image" src="img/tablet-logo.svg" alt="Логотип сайта интернет-магазина кофейных напитков">
           </picture>
           <div class="page-footer__logo-text">Интернет-магазин кофейных напитков</div>
@@ -412,6 +470,7 @@
         <ul class="page-footer__list-social">
           <li class="page-footer__item-social">
             <a href="#" class="page-footer__link-social">
+              <span class="visually-hidden">Вконтакте</span>
               <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
                   d="M1.40589 1.40589C0 2.81177 0 5.0745 0 9.6V10.4C0 14.9255 0 17.1882 1.40589 18.5941C2.81177 20 5.0745 20 9.6 20H10.4C14.9255 20 17.1882 20 18.5941 18.5941C20 17.1882 20 14.9255 20 10.4V9.6C20 5.0745 20 2.81177 18.5941 1.40589C17.1882 0 14.9255 0 10.4 0H9.6C5.0745 0 2.81177 0 1.40589 1.40589ZM3.37505 6.08337C3.48338 11.2834 6.08337 14.4084 10.6417 14.4084H10.9001V11.4334C12.5751 11.6 13.8417 12.825 14.35 14.4084H16.7167C16.0667 12.0417 14.3583 10.7334 13.2916 10.2334C14.3583 9.61671 15.8583 8.11671 16.2166 6.08337H14.0666C13.5999 7.73337 12.2168 9.23337 10.9001 9.37504V6.08337H8.75V11.85C7.41667 11.5167 5.73338 9.90004 5.65837 6.08337H3.37505Z"
@@ -421,6 +480,7 @@
           </li>
           <li class="page-footer__item-social">
             <a href="#" class="page-footer__link-social">
+              <span class="visually-hidden">Пинтерест</span>
               <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M11 8.96454e-05C4.92488 8.96454e-05 0 4.92497 0 11C0 15.6602 2.8994 19.644 6.99129 21.2467C6.89517 20.3764 6.80825 19.0379 7.02943 18.0878C7.22934 17.2293 8.31931 12.6201 8.31931 12.6201C8.31931 12.6201 7.99028 11.9612 7.99028 10.987C7.99028 9.45743 8.87682 8.31552 9.98068 8.31552C10.9192 8.31552 11.3724 9.0201 11.3724 9.86499C11.3724 10.8088 10.7716 12.2199 10.4615 13.5275C10.2023 14.6223 11.0105 15.5152 12.0904 15.5152C14.0454 15.5152 15.5483 13.4537 15.5483 10.4781C15.5483 7.84429 13.6558 6.00285 10.9535 6.00285C7.82365 6.00285 5.98653 8.35042 5.98653 10.7765C5.98653 11.7219 6.35073 12.7357 6.80518 13.2868C6.89508 13.3958 6.90824 13.4912 6.88146 13.6023C6.79797 13.9498 6.6124 14.6969 6.57597 14.8498C6.528 15.0512 6.41655 15.0939 6.20808 14.9969C4.83426 14.3574 3.9753 12.3488 3.9753 10.7355C3.9753 7.26559 6.49644 4.07891 11.2434 4.07891C15.0593 4.07891 18.0247 6.79806 18.0247 10.432C18.0247 14.223 15.6344 17.2739 12.3167 17.2739C11.202 17.2739 10.1542 16.6949 9.79547 16.0109C9.79547 16.0109 9.2439 18.1111 9.11018 18.6258C8.86186 19.5812 8.19145 20.7788 7.74303 21.5095C8.77223 21.8281 9.86598 22 11 22C17.0751 22 22 17.0751 22 11C22 4.92497 17.0751 8.96454e-05 11 8.96454e-05Z"
@@ -430,6 +490,7 @@
           </li>
           <li class="page-footer__item-social">
             <a href="#" class="page-footer__link-social">
+              <span class="visually-hidden">Одноклассники</span>
               <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
                   d="M1.4 1.4C3.33786e-06 2.812 3.35195e-06 5.074 3.35195e-06 9.6V10.4L1.66545e-06 10.5136C-9.77702e-05 14.97 -0.00014782 17.2117 1.4 18.6C2.812 20 5.074 20 9.6 20H10.4H10.5131C14.9698 20.0001 17.2117 20.0001 18.6 18.6C20 17.188 20 14.926 20 10.4V9.6V9.48685C20.0001 5.03015 20.0001 2.7883 18.6 1.4C17.188 3.33786e-06 14.926 3.35195e-06 10.4 3.35195e-06H9.6L9.48639 1.66545e-06C5.03 -9.77702e-05 2.78825 -0.00014782 1.4 1.4ZM10.0194 10.1972C11.6876 10.1972 13.0477 8.83717 13.0477 7.16889C13.0477 5.50061 11.6876 4.14061 10.0194 4.14061C8.33296 4.14061 6.97295 5.50061 6.97295 7.16889C6.97295 8.83717 8.33296 10.1972 10.0194 10.1972ZM10.0194 5.91768C10.7084 5.91768 11.2706 6.47982 11.2706 7.16889C11.2706 7.85796 10.7084 8.4201 10.0194 8.4201C9.3303 8.4201 8.76816 7.85796 8.76816 7.16889C8.75003 6.47982 9.31216 5.91768 10.0194 5.91768ZM11.2343 12.6815C11.8509 12.5364 12.4493 12.3007 12.9933 11.9561C13.4103 11.7023 13.5372 11.1401 13.2653 10.7231C13.0114 10.306 12.4493 10.1791 12.0322 10.4511C10.7991 11.2308 9.18524 11.2308 7.95216 10.4511C7.53509 10.1972 6.99109 10.306 6.71909 10.7231C6.48336 11.1401 6.61029 11.6841 7.02736 11.938C7.57137 12.2825 8.16977 12.5183 8.7863 12.6634L7.0999 14.3498C6.75536 14.6943 6.75536 15.2565 7.0999 15.601C7.28123 15.7823 7.49883 15.8548 7.73456 15.8548C7.9703 15.8548 8.1879 15.7641 8.36923 15.601L10.0375 13.9327L11.7058 15.601C12.0503 15.9455 12.6124 15.9455 12.957 15.601C13.3015 15.2565 13.3015 14.6943 12.957 14.3498L11.2343 12.6815Z"
@@ -443,16 +504,16 @@
         <h2 class="page-footer__title">Интернет-магазин</h2>
         <ul class="page-footer__shop-list">
           <li class="page-footer__shop-item">
-            <a href="#" class="page-footer__shop-link">Каталог</a>
+            <a  class="page-footer__shop-link" href="#">Каталог</a>
           </li>
           <li class="page-footer__shop-item">
-            <a href="#" class="page-footer__shop-link">Доставка</a>
+            <a  class="page-footer__shop-link" href="#">Доставка</a>
           </li>
           <li class="page-footer__shop-item">
-            <a href="#" class="page-footer__shop-link">Способы оплаты</a>
+            <a  class="page-footer__shop-link" href="#">Способы оплаты</a>
           </li>
           <li class="page-footer__shop-item">
-            <a href="#" class="page-footer__shop-link">О нас</a>
+            <a  class="page-footer__shop-link" href="#">О нас</a>
           </li>
         </ul>
       </div>
@@ -460,13 +521,13 @@
         <h2 class="page-footer__title">Медиа</h2>
         <ul class="page-footer__media-list">
           <li class="page-footer__media-item">
-            <a href="#" class="page-footer__media-link">Блог</a>
+            <a  class="page-footer__media-link" href="#">Блог</a>
           </li>
           <li class="page-footer__media-item">
-            <a href="#" class="page-footer__media-link">Информация для СМИ</a>
+            <a  class="page-footer__media-link" href="#">Информация для СМИ</a>
           </li>
           <li class="page-footer__media-item">
-            <a href="#" class="page-footer__media-link">Правовая информация</a>
+            <a  class="page-footer__media-link" href="#">Правовая информация</a>
           </li>
         </ul>
       </div>
@@ -474,7 +535,7 @@
         <h2 class="page-footer__title">Контакты</h2>
         <ul class="page-footer__contacts-list">
           <li class="page-footer__contacts-item">
-            <a href="#" class="page-footer__contacts-link">
+            <a  class="page-footer__contacts-link" href="#">
               <svg width="13" height="16" viewBox="0 0 13 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
                   d="M11.8 6.5C11.8 8.83027 10.4332 10.9174 8.8884 12.5109C8.13169 13.2915 7.37106 13.9131 6.79878 14.3393C6.6918 14.419 6.59177 14.4916 6.5 14.5569C6.40823 14.4916 6.3082 14.419 6.20122 14.3393C5.62894 13.9131 4.86831 13.2915 4.1116 12.5109C2.56678 10.9174 1.2 8.83027 1.2 6.5C1.2 3.57289 3.57289 1.2 6.5 1.2C9.42711 1.2 11.8 3.57289 11.8 6.5ZM13 6.5C13 12.0899 6.5 16 6.5 16C6.5 16 0 12.0899 0 6.5C0 2.91015 2.91015 0 6.5 0C10.0899 0 13 2.91015 13 6.5ZM8.8 6.5C8.8 7.77026 7.77026 8.8 6.5 8.8C5.22974 8.8 4.2 7.77026 4.2 6.5C4.2 5.22974 5.22974 4.2 6.5 4.2C7.77026 4.2 8.8 5.22974 8.8 6.5ZM10 6.5C10 8.433 8.433 10 6.5 10C4.567 10 3 8.433 3 6.5C3 4.567 4.567 3 6.5 3C8.433 3 10 4.567 10 6.5Z"
